--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:image" content="route.png" />
 	<link rel="stylesheet" href="lib/leaflet/leaflet.css" />
 	<link rel="stylesheet" href="lib/cluster/MarkerCluster.css" />	
-	<link rel="stylesheet" href="js/Leaflet.Photo/Leaflet.Photo.css" />	
+	<link rel="stylesheet" href="js/leaflet_photo/Leaflet.Photo.css" />	
 	<link rel="stylesheet" href="css/map.css" />
 </head>
 <body>
@@ -15,7 +15,7 @@
 	<script src="lib/reqwest.min.js"></script>
 	<script src="lib/leaflet/leaflet.js"></script>
 	<script src="lib/cluster/leaflet.markercluster.js"></script>	
-	<script src="js/Leaflet.Photo/Leaflet.Photo.js"></script>	
+	<script src="js/leaflet_photo/Leaflet.Photo.js"></script>	
 	<script>
 
 	var map = L.map('map', {
